begin playlist select functionality

--- a/app/translations/de.json
+++ b/app/translations/de.json
@@ -24,7 +24,7 @@
   "smartify.containers.HomePage.start_project.message": "Ein skalierendes, offline-first Fundament mit der besten DX und einem Fokus auf Performance und bewährte Methoden",
   "smartify.containers.HomePage.tryme.atPrefix": "",
   "smartify.containers.HomePage.login.header": "Probiere mich!",
-  "smartify.containers.HomePage.tryme.message": "Zeige die Github Repositories von",
+  "smartify.containers.HomePage.tryme.message": "Zeige die Github Playlistsitories von",
   "smartify.containers.LocaleToggle.de": "",
   "smartify.containers.LocaleToggle.en": "",
   "smartify.containers.NotFoundPage.header": "Seite nicht gefunden."
